syntax = "proto3";

package logging_service;

service LogMeasurement {
  rpc Log(LogRequest) returns (LogResponse);
}

message LogRequest{
  string measured_pin = 1;

  float voltage = 2;
}

message LogResponse{}
